# xtgeo

./: .appveyor.yml  .clang-format  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  .readthedocs.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  MANIFEST.in  MANIFEST.in.old  Makefile  README.md  README.rst  README.txt  README_testcommands.txt  bandit.yml  cleanup.sh  codecov.yml  conftest.py  makeclean.bat  mypy.ini  pyproject.toml  pytest.ini  pytest.ini.keep  requirements.txt  requirements_appveyor.txt  requirements_dev.txt  requirements_setup.txt  setup.cfg  setup.py  setup.py.OLD  setup.py.backup  test_refine.py  (+4 more)
src/clib/: CMakeLists.txt  cxtgeo.i  cxtgeo_fake.py
src/clib/xtg/: .clang-format  cpgrd_imp_roff_coordsv.c  cube_coord_val_ijk.c  cube_export_rmsregular.c  cube_export_segy.c  cube_get_randomline.c  cube_ijk_from_xyz.c  cube_import_segy.c  cube_import_storm.c  cube_resample_cube.c  cube_scan_segy_hdr.c  cube_swapaxes.c  cube_value_ijk.c  cube_value_xyz_interp.c  cube_vertical_val_list.c  except.c  grd3d_adj_cells.c  grd3d_calc_dxdy.c  grd3d_calc_dz.c  grd3d_calc_xyz.c  grd3d_conv_grid_roxapi.c  grd3d_conv_roxapi_grid.c  grd3d_convert_hybrid.c  grd3d_copy.c  grd3d_corners.c  grd3d_crop_geometry.c  grd3d_ecl_tsteps.c  grd3d_export_egrid.c  grd3d_export_grdecl.c  grd3d_export_grdeclprop.c  grd3d_export_grdeclprop2.c  grd3d_export_roff_end.c  grd3d_export_roff_prop.c  grd3d_from_cube.c  grd3d_geometrics.c  grd3d_get_all_corners.c  grd3d_get_lay_slice.c  grd3d_get_randomline.c  grd3d_imp_ecl_egrid.c  grd3d_imp_prop_roffbin.c  (+118 more)
src/lib/: CMakeLists.txt  cxtgeo.i
src/lib/include/xtgeo/: constants.hpp  cube.hpp  geometry.hpp  geometry_basics.hpp  grid3d.hpp  logging.hpp  numerics.hpp  point.hpp  regsurf.hpp  types.hpp  xtgeo.h  xyz.hpp
src/lib/src/: common.h  cube_coord_val_ijk.c  cube_export_rmsregular.c  cube_export_segy.c  cube_get_randomline.c  cube_ijk_from_xyz.c  cube_import_rmsregular.c  cube_import_segy.c  cube_import_storm.c  cube_resample_cube.c  cube_scan_segy_hdr.c  cube_value_ijk.c  cube_value_xyz_cell.c  cube_value_xyz_interp.c  cube_vertical_val_list.c  cube_xy_from_ij.c  except.c  grd3d_adj_cells.c  grd3d_check_cell_splits.c  grd3d_collapse_inact.c  grd3d_conv_grid_roxapi.c  grd3d_conv_roxapi_grid.c  grd3d_convert_hybrid.c  grd3d_corners.c  grd3d_crop_geometry.c  grd3d_geometrics.c  grd3d_get_all_corners.c  grd3d_get_lay_slice.c  grd3d_get_randomline.c  grd3d_inact_outside_pol.c  grd3d_make_z_consistent.c  grd3d_midpoint.c  grd3d_point_in_cell.c  grd3d_point_val_crange.c  grd3d_points_ijk_cells.c  grd3d_reduce_onelayer.c  grd3d_refine_vert.c  grd3d_reverse_jrows.c  grd3d_roff2xtgeo_splitenz.c  grd3d_setval_poly.c  (+75 more)
src/lib/src/common/: geometry.cpp
src/lib/src/common/geometry/: hexahedron_eval.cpp  hexahedron_point_in_isoparametric.cpp  hexahedron_point_in_raycasting.cpp  hexahedron_point_in_tetrahedrons_by_scheme.cpp  hexahedron_point_in_tetrahedrons_legacy.cpp  hexahedron_point_in_usingplanes.cpp  interpolate.cpp  polygons.cpp  quadrilateral.cpp  tetrahedron.cpp  volumes.cpp
src/lib/src/common/logging/: logging.cpp
src/lib/src/cube/: cube.cpp
src/lib/src/grid3d/: cell.cpp  cell_xyz.cpp  cellvol.cpp  grid.cpp  grid_fence_extract.cpp  grid_reorganize.cpp  grid_surf_oper.cpp  grid_xyz_in.cpp  transmissibility.cpp  well_cell_intersections.cpp  zcornsv_utilities.cpp
src/lib/src/regsurf/: sample_grid3d.cpp  utilities.cpp
src/xtgeo/clib/: CMakeLists.txt  cxtgeo.i  cxtgeo_fake.py
src/xtgeo/clib/etc/ctests/: test_cubic_interpolation.c  test_eclgridprop.c  test_grd3d_onelayer.c  test_point_in_cell_profiling.c
src/xtgeo/clib/etc/tap/: CMakeLists.txt
src/xtgeo/clib/xtg/: .clang-format  cube_coord_val_ijk.c  cube_export_rmsregular.c  cube_export_segy.c  cube_get_randomline.c  cube_import_rmsregular.c  cube_import_storm.c  cube_resample_cube.c  cube_swapaxes.c  cube_value_ijk.c  cube_value_xyz_cell.c  cube_value_xyz_interp.c  cube_vertical_val_list.c  cube_xy_from_ij.c  grd3d_adj_cells.c  grd3d_calc_dxdy.c  grd3d_calc_dz.c  grd3d_calc_xyz.c  grd3d_check_cell_splits.c  grd3d_collapse_inact.c  grd3d_conv_grid_roxapi.c  grd3d_conv_roxapi_grid.c  grd3d_convert_hybrid.c  grd3d_copy.c  grd3d_corners.c  grd3d_crop_geometry.c  grd3d_ecl_tsteps.c  grd3d_export_egrid.c  grd3d_export_grdecl.c  grd3d_export_grdeclprop.c  grd3d_export_grdeclprop2.c  grd3d_export_roff_end.c  grd3d_export_roff_grid.c  grd3d_export_roff_prop.c  grd3d_export_roff_pstart.c  grd3d_from_cube.c  grd3d_geometrics.c  grd3d_get_all_corners.c  grd3d_get_lay_slice.c  grd3d_get_randomline.c  (+99 more)
src/xtgeo/cxtgeo/clib/: CMakeLists.txt  README
src/xtgeo/cxtgeo/clib/ctests/: CMakeLists.txt  test_cube.c.keep  test_ecl_readrecords.c  test_eclgridprop.c  test_grd3d_onelayer.c  test_map_grd3d.c  test_messages.c  test_roffgrid.c  test_surf.c  test_x.c
src/xtgeo/cxtgeo/clib/redundant_src/: cube_conv_from_grd3d.c  grd3d_add_zcells.c  grd3d_adj_dzcorn.c  grd3d_adj_z_from_mapv3.c  grd3d_calc_abase.c  grd3d_calc_sum_dz.c  grd3d_calc_z.c  grd3d_copy_prop_float.c  grd3d_diff_zcorn.c  grd3d_export_ecl_grid.c  grd3d_export_ecl_prop.c  grd3d_export_roff_prop_old.c  grd3d_flip_depth.c  grd3d_frac_prop_within_ii.c  grd3d_from_cube.c.inprep  grd3d_ifthen_prop_intint.c  grd3d_ijk_range_by_prop.c  grd3d_ijwindow_from_poly.c  grd3d_import_ecl_grid.c  grd3d_import_roff_grid.c.todelete  grd3d_import_roff_prop.c  grd3d_import_storm_prop.c  grd3d_interp_prop_verti.c  grd3d_interp_prop_vertii.c  grd3d_merge_grids.c  grd3d_reduce_by_zon.c  grd3d_scan_ecl_grid_hd.c  grd3d_set_dz_cell.c  grd3d_set_prop_in_pol.c  grd3d_set_propval_int.c  grd3d_split_prop_by_pol.c  grd3d_strip_array.c  grd3d_transfer_prop_dbl.c  grd3d_transfer_prop_int.c  grd3d_zdominance_int.c  map_create.c  map_export_arcflt.c  map_export_ev_ascii.c  map_export_surfer_ascii.c  map_get_z_from_ij.c  (+16 more)
src/xtgeo/cxtgeo/clib/src/: CMakeLists.txt  cube_coord_val_ijk.c  cube_export_rmsregular.c  cube_export_segy.c  cube_get_randomline.c  cube_ijk_from_xyz.c  cube_import_rmsregular.c  (+191 more)
(+740 files in other folders)
