
[flake8]
exclude = docs/conf.py, src/xtgeo/cxtgeo/*.py, .eggs, _skbuild
max-line-length = 88
ignore = E402, W503, E203, C901

[pydocstyle]
convention = google
match = (?!(test_|_)).*\.py

[aliases]
test = pytest

[options]
setup_requires =
  setuptools_scm
  pytest_runner
  cmake
  ninja
  scikit-build
